test2 pour erreur ligthhouse Avoid large layout shifts 2 layout shifts

--- a/assets/style.css
+++ b/assets/style.css
@@ -252,14 +252,14 @@ p {
   font-family: "Spectral";
   font-weight: 800;
   font-style: italic;
-  width: 60%;
+  /* width: 60%; */
   line-height: 1.2;
   font-size: 1rem;
   margin-bottom: 0.5rem;
 }
 
 #about-me p {
-  width: 80%;
+  /* width: 80%; */
   line-height: 21px;
   font-size: 14px;
 }
